-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 13.0.0
-
None
-
Workstation:
{noformat}
Qt 6.6.0 (x86_64-little_endian-lp64 shared (dynamic) release build; by GCC 10.3.1 20210422 (Red Hat 10.3.1-1)) on "xcb"
OS: Ubuntu 20.04.6 LTS [linux version 5.15.0-101-generic]
Architecture: x86_64; features: SSE2 SSE3 SSSE3 SSE4.1 SSE4.2
Environment:
QSG_RHI_BACKEND="opengl"
QT4_IM_MODULE="xim"
QT_ACCESSIBILITY="1"
QT_QPA_PLATFORM="xcb"
Remote Linux Host:
Linux raspberrypi 4.19.66-v7+ #1253 SMP Thu Aug 15 11:49:46 BST 2019 armv7l GNU/Linux
No LSB modules are available.
Distributor ID:Raspbian
Description:Raspbian GNU/Linux 9.13 (stretch)
Release:9.13
Codename:stretchWorkstation: {noformat} Qt 6.6.0 (x86_64-little_endian-lp64 shared (dynamic) release build; by GCC 10.3.1 20210422 (Red Hat 10.3.1-1)) on "xcb" OS: Ubuntu 20.04.6 LTS [linux version 5.15.0-101-generic] Architecture: x86_64; features: SSE2 SSE3 SSSE3 SSE4.1 SSE4.2 Environment: QSG_RHI_BACKEND="opengl" QT4_IM_MODULE="xim" QT_ACCESSIBILITY="1" QT_QPA_PLATFORM="xcb" Remote Linux Host: Linux raspberrypi 4.19.66-v7+ #1253 SMP Thu Aug 15 11:49:46 BST 2019 armv7l GNU/Linux No LSB modules are available. Distributor ID:Raspbian Description:Raspbian GNU/Linux 9.13 (stretch) Release:9.13 Codename:stretch
-
-
3ea08f9b6 (14.0)
When running an app in "Remote linux host" and pressing the "stop running program" button the Aplication output show the message
15:32:03: The process was ended forcefully.
But if I go to the terminal pane, create a terminal for the remote device and the run the command
killall -TERM myapp
it ends gracefully
- is duplicated by
-
QTCREATORBUG-31112 Qt showing process crashed when trying to stop a new console application
-
- Closed
-
-
QTCREATORBUG-31142 Configurable timeout before killing remote process
-
- Closed
-
- mentioned in
-
Page Loading...