ProjectExplorer: Make the timeout between TERM and KILL configurable

Fixes: QTCREATORBUG-31025
Change-Id: Ibb5b9f3a946e1603fb55b57511c4b6d90b1d6217
Reviewed-by: hjk <hjk@qt.io>