src/plugins/projectexplorer/runcontrol.cpp
@@ -1320,11 +1320,12 @@ void SimpleTargetRunnerPrivate::stop()
     m_resultData.m_exitStatus = QProcess::CrashExit;
 
     const bool isLocal = !m_command.executable().needsDevice();
+    const auto totalTimeout = 2 * m_process.reaperTimeout();
     if (isLocal) {
         if (!isRunning())
             return;
         m_process.stop();
-        m_process.waitForFinished();
+        m_process.waitForFinished(totalTimeout);
         QTimer::singleShot(100, this, [this] { forwardDone(); });
     } else {
         if (m_stopRequested)
@@ -1334,8 +1335,7 @@ void SimpleTargetRunnerPrivate::stop()
         switch (m_state) {
         case Run:
             m_process.stop();
-            using namespace std::chrono_literals;
-            if (!m_process.waitForFinished(2s)) { // TODO: it may freeze on some devices
+            if (!m_process.waitForFinished(totalTimeout)) {
                 q->appendMessage(Tr::tr("Remote process did not finish in time. "
                                         "Connectivity lost?"), ErrorMessageFormat);
                 m_process.close();
@@ -1520,6 +1520,8 @@ void SimpleTargetRunner::start()
     d->m_stopReported = false;
     d->disconnect(this);
     d->m_process.setTerminalMode(useTerminal ? Utils::TerminalMode::Run : Utils::TerminalMode::Off);
+    d->m_process.setReaperTimeout(
+        std::chrono::seconds(projectExplorerSettings().reaperTimeoutInSeconds));
     d->m_runAsRoot = runAsRoot;
 
     const QString msg = Tr::tr("Starting %1...").arg(d->m_command.displayName());
